Thu Apr 24 11:35:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* subr.c, cvs.h (pathname_levels): New function, from a piece of
	send_file_names.
	* client.c (send_file_names): Call pathname_levels in place of the
	code which was moved there.
	* server.c, server.h (server_pathname_check): New function.
	* recurse.c (start_recursion): Call it.
	* sanity.sh (modules3): New test modules3-11b tests for above fix.

	* filesubr.c: Do not define L_tmpnam.  It is in ANSI and SunOS4,
	so I don't think there will be a problem with it being missing.
	Defining it too small can cause memory corruption.
	(cvs_temp_name): Do not use L_tmpnam in the mktemp code; this
	could cause a buffer overflow if the -T global option was in use.

Thu Apr 24 13:21:15 1997  Norbert Kiesel  <nk@cosa.de>

	* filesubr.c (cvs_temp_name): Use tempnam if available, else
 	mktemp, else tmpnam. See the comment for rationale.

	* sanity.sh: use "tar cf - ." instead of "tar cf - *" for
 	directory copies.

Wed Apr 23 23:41:47 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (serve_update_prog): If in readonly mode, give an error.

Wed Apr 23 19:07:41 1997  Norbert Kiesel  <nk@cosa.de>

	* subr.c (line2argv): Allocate at least 4 slots for argv.

	* checkout.c (checkout_proc): Add a comment which says why the
 	above change was necessary to avoid writing to unallocated memory.

Wed Apr 23 11:20:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* entries.c (ParseTag): Always set *NONBRANCHP.

21 Apr 1997  Jim Kingdon

	* client.c (update_entries), rcs.c (expand_keywords): Rewrite
	test to avoid signed/unsigned warning.

Mon Apr 21 09:02:22 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (patch_file): Add comment about whether auto-detecting
	features of the DIFF program is a good idea.

Mon Apr 21 00:03:34 1997  Ian Lance Taylor  <ian@cygnus.com>

	Don't require the patch program:
	* client.c (struct update_entries_data): Add
	UPDATE_ENTRIES_RCS_DIFF to contents enum.