@@ -1,3 +1,8 @@
+Fri Apr 25 13:28:55 1997  Ian Lance Taylor  <ian@cygnus.com>
+
+	* client.c (update_entries): In UPDATE_ENTRIES_RCS_DIFF case,
+	write to a temporary file and then rename it.
+
 Thu Apr 24 11:35:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* subr.c, cvs.h (pathname_levels): New function, from a piece of
